--- a/views/admin/pages/dichbenh-status.pug
+++ b/views/admin/pages/dichbenh-status.pug
@@ -60,7 +60,7 @@ block main
   if statusPage == 0
     .section-5
       .inner-wrap
-        .inner-change-status(change-multi data-api=`/${pathAdmin}/dichbenh/${loaidich}//change-multi`)
+        .inner-change-status(change-multi data-api=`/${pathAdmin}/dichbenh/${loaidich}/${effect}/change-multi`)
           .inner-item
             select
               option(value="") -- Hành động --
