Thêm phần tải app

--- a/views/admin/partials/sider.pug
+++ b/views/admin/partials/sider.pug
@@ -136,6 +136,10 @@ nav.sider
       a.dashboard(href=`/${pathAdmin}/profile/edit`)
         i.fa-solid.fa-user-gear
         |  Thông tin cá nhân
+    li
+      a.dashboard(href="/uploads/app-release.apk" download )
+        i.fa-solid.fa-mobile-screen-button
+        |  Tải APK
 
     li
       a(href="javascript:;", class="inner-logout")
